--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
-
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <script>
   console.log("OK");
@@ -74,7 +74,7 @@
   
 </script>
 
-LULLLLLLLLLLLLLLLLLLL
+<script src="script.js"></script>
 
 <div class="row">
 
