--- a/index.html
+++ b/index.html
@@ -127,5 +127,5 @@
   <button onclick="drift()">Drift</button>
 </div>
 <div class="row">
-  <button onclick="window.open('https://codepen.io/jackisace/full/yLXjENR')">Viewer</button>
+  <button onclick="window.open('viewer.html')">Viewer</button>
 </div>
