--- a/viewer.html
+++ b/viewer.html
@@ -67,6 +67,18 @@ dbGet();
   <button onclick="window.open('index.html')">Capture</button>
 </div>
     
+
+
+<div class="output"></div>
+<script language="javascript">
+    var realConsoleLog = console.log;
+    console.log = function () {
+        var message = [].join.call(arguments, " ");
+        $(".output").text(message);
+        realConsoleLog.apply(console, arguments);
+    };
+    console.log("hello", "my", "name", "is", "shantharuban");
+</script>
   </body>
 
 
